Index file Edited

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 </head>
 
 <body>
-    <h2>This is my first terminal Git using process</h2>
-    <h2>This is my first terminal Git using process</h2>
-    <h2>This is my first terminal Git using process</h2>
-    <h2>This is my first terminal Git using process32432</h2>
+    <section class="sd">
+        <div style="margin:0 auto; max-width: 1400px; width:100%">
+            
+        </div>
+    </section>
 </body>
 
 </html>
